--- a/QuizApp-SPA/package.json
+++ b/QuizApp-SPA/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.0.4",
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
+    "@auth0/angular-jwt": "^5.0.1",
     "font-awesome": "^4.7.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
