auth on client and server

--- a/src/QuizAppMainApi/appsettings.json
+++ b/src/QuizAppMainApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "Auth": {
+    "SecurityKey": "LaUiENDi03NUjwjyu463"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=QuizApp;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
