--- a/tests/QuizAppMain.Tests.Unit/QuizAppMain.Tests.Unit.csproj
+++ b/tests/QuizAppMain.Tests.Unit/QuizAppMain.Tests.Unit.csproj
@@ -7,10 +7,16 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.9" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
         <PackageReference Include="xunit" Version="2.4.0" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
         <PackageReference Include="coverlet.collector" Version="1.2.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\QuizAppMainApi\QuizAppMainApi.csproj" />
+      <ProjectReference Include="..\..\src\QuizAppModels\QuizAppModels.csproj" />
     </ItemGroup>
 
 </Project>
