--- a/src/QuizAppMainApi/appsettings.json
+++ b/src/QuizAppMainApi/appsettings.json
@@ -3,7 +3,7 @@
     "SecurityKey": "LaUiENDi03NUjwjyu463"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=QuizApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source = QuizApp.db"
   },
   "Logging": {
     "LogLevel": {
