git ignore update

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 *.user
 *.userosscache
 *.sln.docstates
+QuizApp.db
+QuizApp.db-shm
+QuizApp.db-wal
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
