Change base to postgresql

--- a/src/QuizAppMainApi/appsettings.json
+++ b/src/QuizAppMainApi/appsettings.json
@@ -3,7 +3,7 @@
     "SecurityKey": "LaUiENDi03NUjwjyu463"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source = QuizApp.db"
+    "DefaultConnection": "User ID=postgres;Password=Sernik2020;Host=localhost;Port=5432;Database=QuizApp;Pooling=true;"
   },
   "Logging": {
     "LogLevel": {
