--- a/src/QuizAppGameClient/angular.json
+++ b/src/QuizAppGameClient/angular.json
@@ -67,7 +67,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "QuizAppGameClient:build"
+            "browserTarget": "QuizAppGameClient:build",
+            "port": 4201
           },
           "configurations": {
             "production": {
