--- a/src/QuizAppAuthApi/QuizAppAuthApi/appsettings.json
+++ b/src/QuizAppAuthApi/QuizAppAuthApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "Auth": {
+    "SecurityKey": "LaUiENDi03NUjwjyu463"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "User ID=postgres;Password=Sernik2020;Host=localhost;Port=5432;Database=QuizApp;Pooling=true;"
   },
