--- a/src/QuizAppMainApi/QuizAppMainApi.csproj
+++ b/src/QuizAppMainApi/QuizAppMainApi.csproj
@@ -27,5 +27,9 @@
     <ProjectReference Include="..\QuizAppModels\QuizAppModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\HistoryQuizes\" />
+  </ItemGroup>
+
 
 </Project>
